# freebies-app

./: .env.example  .gitignore  .prettierrc  BOGOS_REDESIGN.md  Cargo.toml  GETTING-STARTED.md  TODO-SPECS.md  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vitest.config.ts
.claude/: settings.json
.codegraph/: daemon.pid
.continue/mcpServers/: new-mcp-server-1.yaml
.github/workflows/: ci.yml
apps/shopify-admin/: .env.test.example  package.json  playwright.config.ts  react-router.config.ts  shopify.app.toml  tsconfig.json  vercel.json  vite.config.ts
apps/shopify-admin/app/: root.tsx  shopify.server.ts
extensions/cart-transform/: Cargo.toml  input.graphql
extensions/cart-validation/: Cargo.toml  input.graphql
extensions/checkout-ui/: package.json  shopify.extension.toml
extensions/customer-account-ui/: package.json  shopify.extension.toml
extensions/discount-function/: Cargo.toml  input.graphql
extensions/discount-function/src/: lib.rs  types.rs
extensions/theme-extension/: shopify.extension.toml
extensions/web-pixel/: package.json  shopify.extension.toml
extensions/web-pixel/src/: index.js
scripts/: benchmark-functions.sh  build-storefront.mjs  check-bundle-sizes.mjs  setup-rust.ps1  setup-rust.sh
workers/analytics-reconcile/: package.json  tsconfig.json
workers/collection-sync/: package.json  tsconfig.json
workers/inventory-sync/: package.json
workers/market-sync/: package.json
workers/offer-publisher/: package.json  tsconfig.json
workers/product-sync/: package.json  tsconfig.json
(+237 files in other folders)
