[package]
name = "promo-engine-discount-function"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"   # Optimize for size (smaller WASM binary)
lto = true
strip = "symbols"
